--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.1
   share_plus: ^10.1.3
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  google_sign_in: 6.2.2
+  cloud_firestore: ^6.1.2
 
 dev_dependencies:
   flutter_test:
