--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
+  provider: ^6.1.2
   intl: ^0.19.0
   url_launcher: ^6.3.1
   share_plus: ^10.1.3
