--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   firebase_auth: ^6.1.4
   google_sign_in: 6.2.2
   cloud_firestore: ^6.1.2
+  speech_to_text: ^7.3.0
+  flutter_tts: ^4.2.5
+  geocoding: ^4.0.0
+  flutter_polyline_points: ^3.1.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
