--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   geocoding: ^4.0.0
   flutter_polyline_points: ^3.1.0
   http: ^1.6.0
+  sensors_plus: ^6.1.1
+  light_sensor: ^3.0.0
 
 dev_dependencies:
   flutter_test:
