--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   light_sensor: ^3.0.0
   get: ^4.7.3
   video_player: ^2.11.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
